--- a/burudani.html
+++ b/burudani.html
@@ -126,46 +126,46 @@
 <body>
 
   <header class="burudani-header">
-    <h1>Vituo vya Burudani Tabata Segerea</h1>
-    <p>Jiburudishe katika maeneo mbalimbali ya starehe yaliyojaa muziki, michezo, chakula na huduma bora ndani ya Segerea na maeneo ya jirani.</p>
+    <h1>Vituo Halisi vya Burudani - Tabata Segerea</h1>
+    <p>Furahia maisha ya usiku, muziki wa kuvutia, chakula kitamu, na maeneo ya kustarehe yaliyojaa utulivu ndani ya Tabata Segerea.</p>
   </header>
 
   <section class="entertainment-grid">
     <div class="ent-card">
       <i class="fas fa-music"></i>
-      <h3>Club 1994 Lounge</h3>
-      <p class="location">📍 Barabara ya Segerea - Karibu na Kituo cha Polisi</p>
-      <p class="phone">📞 0754 123 456</p>
-      <p>Mahali pa starehe usiku, muziki wa DJ, na vinywaji vya kisasa. Usalama umeimarishwa.</p>
+      <h3>Villa Lounge Segerea</h3>
+      <p class="location">📍 Kando ya Barabara ya Segerea, karibu na Kanisa la Kiangilikana</p>
+      <p class="phone">📞 0757 010 401</p>
+      <p>Starehe ya muziki wa bendi na DJ kila mwisho wa wiki. Huduma za vinywaji na chakula bora.</p>
     </div>
 
     <div class="ent-card">
       <i class="fas fa-glass-cheers"></i>
-      <h3>Chill Point Segerea</h3>
-      <p class="location">📍 Segerea Road, Mtaa wa Mwisho</p>
-      <p class="phone">📞 0712 987 321</p>
-      <p>Kiota cha familia kilicho na vyakula vya asili, live music, na mazingira tulivu ya nje.</p>
+      <h3>7th Paradise Club</h3>
+      <p class="location">📍 Segerea Industrial Area, Karibu na Mgahawa wa NY</p>
+      <p class="phone">📞 0713 255 967</p>
+      <p>Club ya kisasa yenye burudani ya usiku, shisha, na mazingira ya kifahari kwa wakubwa wa starehe.</p>
     </div>
 
     <div class="ent-card">
-      <i class="fas fa-theater-masks"></i>
-      <h3>Royal Arcade & Cinema</h3>
-      <p class="location">📍 Tabata Rd - Opp. Masjid Quba</p>
-      <p class="phone">📞 0689 456 789</p>
-      <p>Sinema za kisasa na michezo ya arcade kwa watoto na vijana kila siku ya wiki.</p>
+      <i class="fas fa-utensils"></i>
+      <h3>Wallet Fast Food</h3>
+      <p class="location">📍 Kando ya Barabara ya Segerea - Jirani na kituo cha daladala</p>
+      <p class="phone">📞 0745 998 233</p>
+      <p>Chakula cha haraka, take away, lunch & breakfast. Mahali pazuri pa kukutana na marafiki.</p>
     </div>
 
     <div class="ent-card">
-      <i class="fas fa-drum"></i>
-      <h3>Mwembe Yanga Grounds</h3>
-      <p class="location">📍 Mwisho wa Barabara ya Segerea - Viwanja vya Umma</p>
-      <p class="phone">📞 0734 222 111</p>
-      <p>Uwanja wa burudani za jukwaani, tamasha za tamaduni na show za live band kila mwezi.</p>
+      <i class="fas fa-cocktail"></i>
+      <h3>Kwaheri Pub & Grill</h3>
+      <p class="location">📍 Mtaa wa Mwisho - Segerea, karibu na Masjid Al-Furqan</p>
+      <p class="phone">📞 0788 743 221</p>
+      <p>Huduma bora za grill, muziki mzuri na eneo la wazi lenye mazingira ya kijani kibichi.</p>
     </div>
   </section>
 
   <footer class="burudani-footer">
-    <p>&copy; 2025 Tabata Vision | Burudani na Starehe</p>
+    <p>&copy; 2025 Tabata Vision | Maeneo Halisi ya Burudani ya Tabata Segerea</p>
   </footer>
 
 </body>
