--- a/hifadhi.html
+++ b/hifadhi.html
@@ -42,7 +42,7 @@
 
   <!-- Serenity Safari Park -->
   <div class="park-card">
-    <img src="https://source.unsplash.com/featured/?safari,park" alt="Serenity Safari Park">
+    <img src="images/maji.jpg" alt="Serenity Safari Park">
     <div class="park-content">
       <h2>Serenity Safari Park</h2>
       <p>Mahali pa kupumua, kuogelea, na kufurahia asili ya asili. Ziwa lina upepo hufaa kwa mikutano, burudani, na mitindo ya picha.</p>
@@ -57,7 +57,7 @@
 
   <!-- Fantasy Park -->
   <div class="park-card">
-    <img src="https://source.unsplash.com/featured/?theme,park" alt="Fantasy Park">
+    <img src="images/fantasy.jpg" alt="Fantasy Park">
     <div class="park-content">
       <h2>Fantasy Park</h2>
       <p>Ukumbi wa burudani, carousel, warsha za sanaa, na minitrek kwa watoto wadogo. Mazingira ya picha za Instagram zilizochanganuliwa!</p>
@@ -72,7 +72,7 @@
 
   <!-- Hifadhi Mbali: Pugu Hills & Kazimzumbwi -->
   <div class="park-card">
-    <img src="https://source.unsplash.com/featured/?forest,Tanzania" alt="Pugu Hills & Kazimzumbwi">
+    <img src="images/pugu.jpg">
     <div class="park-content">
       <h2>Pugu Hills & Kazimzumbwi</h2>
       <p>Moja ya misitu ya kale duniani ndani megacity. Nyasi kubwa, mwinyo wa ndege wa asili, milango ya pepo, na vikarango vya asili.</p>
