--- a/msikiti.html
+++ b/msikiti.html
@@ -135,7 +135,7 @@
 </header>
 
 <section class="image-section">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/28/Modern_mosque.jpg/800px-Modern_mosque.jpg" alt="Msikiti Mkuu wa Tabata">
+  <img src="images/ddd.jpg" alt="Msikiti Mkuu wa Tabata">
 </section>
 
 <section class="content-section">
