--- a/muziki-sanaa.html
+++ b/muziki-sanaa.html
@@ -157,7 +157,7 @@
 
   <!-- Segerea Lounge & Grill -->
   <div class="venue-card">
-    <img src="https://source.unsplash.com/featured/?live-music,band" alt="Segerea Lounge">
+    <img src="images/bar.jpg" alt="Segerea Lounge">
     <div class="content">
       <h2>Segerea Lounge & Grill</h2>
       <p><strong>Huduma:</strong> Bendi ya moja kwa moja kila Jumamosi, Karaoke Jumatatu, DJ Night Jumatano.</p>
@@ -169,7 +169,7 @@
 
   <!-- Ale Bush Pub -->
   <div class="venue-card">
-    <img src="https://source.unsplash.com/featured/?pub,night" alt="Ale Bush Pub">
+    <img src="images/bbq.jpg" alt="Ale Bush Pub">
     <div class="content">
       <h2>Ale Bush Pub & BBQ</h2>
       <p><strong>Huduma:</strong> Bendi ya BBQ kila Ijumaa, nyama choma, vinywaji vya kisasa, na karaoke usiku wa Jumamosi.</p>
@@ -181,7 +181,7 @@
 
   <!-- Blessing Hall -->
   <div class="venue-card">
-    <img src="https://source.unsplash.com/featured/?concert,stage" alt="Blessing Hall">
+    <img src="images/harusi.jpg" alt="Blessing Hall">
     <div class="content">
       <h2>Blessing Hall</h2>
       <p><strong>Huduma:</strong> Send-off parties, DJ mashup events, matukio ya mitindo, na sinema za hadhara.</p>
