--- a/usiku.html
+++ b/usiku.html
@@ -187,7 +187,7 @@
 
   <!-- Shisha Paradise -->
   <article class="venue-card" tabindex="0">
-    <img src="https://images.unsplash.com/photo-1542736667-069246bdbc8a?auto=format&fit=crop&w=900&q=80" alt="Shisha Paradise" />
+    <img src="images/shisha.jpg" alt="Shisha Paradise" />
     <div class="venue-content">
       <h2>Shisha Paradise</h2>
       <p><strong>Maelezo:</strong> Shisha Paradise ni mojawapo ya maeneo ya shisha bora Tabata, ikiwa na aina mbalimbali za shisha pamoja na mandhari ya kimataifa na muziki wa kivita wa vibanda vya nje.</p>
@@ -200,7 +200,7 @@
 
   <!-- Kibao Kata Spot -->
   <article class="venue-card" tabindex="0">
-    <img src="https://images.unsplash.com/photo-1516685304081-de7947d419d0?auto=format&fit=crop&w=900&q=80" alt="Kibao Kata Spot" />
+    <img src="images/uswazi.jpeg" alt="Kibao Kata Spot" />
     <div class="venue-content">
       <h2>Kibao Kata Spot</h2>
       <p><strong>Maelezo:</strong> Mahali pazuri pa kupata kibao kata tamu za nyumbani na nyama choma moto moto kwa jioni zako za burudani Tabata.</p>
