--- a/uwanja-michezo.html
+++ b/uwanja-michezo.html
@@ -155,7 +155,7 @@
 <main>
   <!-- Football Pitch -->
   <article class="court-card" tabindex="0">
-    <img src="https://source.unsplash.com/featured/?football,field" alt="Uwanja wa Soka Tabata" />
+    <img src="images/mipira.jpg" alt="Uwanja wa Soka Tabata" />
     <div class="court-content">
       <h2>Uwanja wa Soka – Tabata Segerea</h2>
       <p><strong>Matumizi:</strong> Mechi za kikundi, afya za jamii, michezo maridadi.</p>
@@ -168,7 +168,7 @@
 
   <!-- Basketball Court -->
   <article class="court-card" tabindex="0">
-    <img src="https://source.unsplash.com/featured/?basketball,court" alt="Uwanja wa Kikapu Segerea" />
+    <img src="images/basketball.jpg" alt="Uwanja wa Kikapu Segerea" />
     <div class="court-content">
       <h2>Kikapu – Segerea Basketball Club</h2>
       <p><strong>Huduma:</strong> Mazoezi ya kikapu, mashindano ya vijana, mafunzo ya SBC.</p>
@@ -181,7 +181,7 @@
 
   <!-- Outdoor Gym -->
   <article class="court-card" tabindex="0">
-    <img src="https://source.unsplash.com/featured/?outdoor,gym" alt="Gym Outdoor Tabata" />
+    <img src="images/gym.jpg" alt="Gym Outdoor Tabata" />
     <div class="court-content">
       <h2>Gym ya Nje – Tabata Segerea</h2>
       <p><strong>Huduma:</strong> Mazoezi ya nguvu, yoga, burpees, mafunzo ya Tabata kama jamii.</p>
